Fehler behoben und unnötigen Code entfernt

--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/AndroidManifest.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/AndroidManifest.xml
@@ -9,21 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name="com.dwm.winesearchapp_extern.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name="com.dwm.winesearchapp_extern.CaptureActivityPortrait"
             android:screenOrientation="sensorPortrait"
             android:stateNotNeeded="true"
             android:theme="@style/zxing_CaptureTheme"
             android:windowSoftInputMode="stateAlwaysHidden" />
-        <activity android:name="com.dwm.winesearchapp_extern.SearchActivity"
-            android:parentActivityName="com.dwm.winesearchapp_extern.LoginActivity">
+        <activity android:name="com.dwm.winesearchapp_extern.SearchActivity">
         </activity>
         <activity android:name="com.dwm.winesearchapp_extern.WinedetailsActivity"
             android:parentActivityName="com.dwm.winesearchapp_extern.SearchActivity">
