Weinsuchapp Extern basic Suchanfrage und Response Umwandlung in Java Klassen implementiert

--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/AndroidManifest.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
             android:theme="@style/zxing_CaptureTheme"
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity android:name="com.dwm.winesearchapp_extern.SearchActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name="com.dwm.winesearchapp_extern.WinedetailsActivity"
             android:parentActivityName="com.dwm.winesearchapp_extern.SearchActivity">
