--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/AndroidManifest.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.dwm.winesearchapp_extern.WinedetailsActivity"
+            android:parentActivityName=".SearchActivity">
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
