--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/build.gradle
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.google.zxing:core:3.2.1'
     implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.ablanco.zoomy:zoomy:1.1.0'
 }
