WineSearchApp_Extern: Touch auf "Produzent" in der DetailsActivity führt nun zu einer neuen Activity, die alle Weine des Produzenten auflistet

--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/build.gradle
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
 
     defaultConfig {
-        applicationId "com.dwm.winesearchapp"
+        applicationId 'com.dwm.winesearchapp_extern'
         minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
