--- a/DWM-App/app/build.gradle
+++ b/DWM-App/app/build.gradle
@@ -37,5 +37,5 @@ dependencies {
     implementation 'com.google.zxing:core:3.2.1'
     implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.ablanco.zoomy:zoomy:1.1.0'
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
 }
