--- a/JuryBriefingApp/app/build.gradle
+++ b/JuryBriefingApp/app/build.gradle
@@ -6,6 +6,15 @@ android {
     compileSdkVersion 31
     buildToolsVersion "31.0.0"
 
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'armeabi-v7a'
+            universalApk true
+        }
+    }
+
     defaultConfig {
         applicationId "com.example.jurybriefingapp"
         minSdkVersion 26
@@ -33,11 +42,11 @@ android {
 }
 
 dependencies {
-
+    implementation files('libs/signalr-client-sdk.jar')
+    implementation files('libs/signalr-client-sdk-android.jar')
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    implementation 'org.apache.solr:solr-solrj:8.1.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
