--- a/JuryBriefingApp/app/src/main/AndroidManifest.xml
+++ b/JuryBriefingApp/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"
         tools:ignore="ManifestOrder" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION"/>
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
