--- a/JuryBriefingApp/app/build.gradle
+++ b/JuryBriefingApp/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 android {
     compileSdkVersion 31
-    buildToolsVersion "31.0.0"
+    buildToolsVersion "26.0.3"
 
     splits {
         abi {
@@ -17,7 +17,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.jurybriefingapp"
-        minSdkVersion 26
+        minSdkVersion 23
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
@@ -44,11 +44,11 @@ android {
 dependencies {
     implementation files('libs/signalr-client-sdk.jar')
     implementation files('libs/signalr-client-sdk-android.jar')
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.code.gson:gson:2.8.6'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
